added links to projects in guithub

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content ="width=device-width, initial-scale=1">
         <title>Subadhra's Portfolio</title>
-        <link href="https://fonts.googleapis.com/css?family=Lato:100,300" rel="stylesheet">
+        <link href="http://fonts.googleapis.com/css?family=Lato:100,300" rel="stylesheet">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/style3.css">
         <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
@@ -163,12 +163,12 @@
                 <div class="col-md-4">
                     <img class="img-responsive center-block" src="images/tic_tac_toe_small.png" alt="Tic Tac Toe Game" data-toggle="modal" data-target="#project2">
                     <h3 class="text-uppercase">Tic Tac Toe Game Project</h3>
-                    <a class="title-href" href= "https://github.com/udacity/sunflower">Link to Project in Github</a>
+                    <a class="title-href" href= "https://github.com/subadhra-srinivas/Udemy_Tic_Tac_Toe_Project">Link to Project in Github</a>
                 </div>
                 <div class="col-md-4">
                     <img class="img-responsive center-block" src="images/black_jack_small.png" alt="Black Jack Game" data-toggle="modal" data-target="#project3">
                     <h3 class="text-uppercase">Black Jack Game Project</h3>
-                    <a class="title-href" href="https://github.com/udacity/bokeh">Link to Project in Github</a>
+                    <a class="title-href" href="https://github.com/subadhra-srinivas/Udemy_Black_Jack_Game_Project">Link to Project in Github</a>
                 </div>
             </div>
         </div>
