added changes to modal boxes

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
                     </div>
                     <div class="modal-body text-blue">
                         <img class="img-responsive" src="images/movies_project_small.png" alt="Movies Project">
-                        <b>This project is about writing a server-side code to store a list of
+                        <p><b>This project is about writing a server-side code to store a list of
                            your favorite movies, including box art imagery and a movie trailer URL.
                            A static webpage will be generated from the code allowing vistors to
                            browser their movies and watch trailers.This was my first project in
-                           this class. I learned a lot about Python.</b>
+                           this class. I learned a lot about Python.</b></p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -42,8 +42,13 @@
                     </div>
                     <div class="modal-body text-blue">
                         <img class="img-responsive" src="images/tic_tac_toe_small.png" alt="Tic Tac Toe Game Project">
-                        <b>This project is about creating a tic-tac-toe game in python
-                           I learned a lot about Python.</b>
+                        <p><b>This project is about creating a tic-tac-toe game in python
+                              These are the requirements:
+                              2 players should be able to play the game (both sitting at the same computer)
+                              The board should be printed out every time a player makes a move
+                              You should be able to accept input of the player position and then place a
+                              symbol on the board
+                              I learned a lot about Python.</b></p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -60,8 +65,15 @@
                     </div>
                     <div class="modal-body text-blue">
                         <img class="img-responsive" src="images/black_jack_small.png" alt="Black Jack Game Project">
-                        <b>This project is about creating a Black Jack game in python
-                           I learned a lot about Python classes.</b>
+                        <p><b>This project is about creating a Complete BlackJack card Game in python.
+                              These are the requirements:
+                              You need to create a simple text-based BlackJack game
+                              The game needs to have one player versus an automated dealer.
+                              The player can stand or hit.
+                              The player must be able to pick their betting amount.
+                              You need to keep track of the players total money.
+                              You need to alert the player of wins, losses, or busts, etc...
+                              I learned a lot about Python classes.</b></p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -78,14 +90,14 @@
                     </div>
                     <div class="modal-body text-blue">
                         <img class="img-responsive" src="images/portfolio.png" alt="Portfolio Project">
-                        <b>This project is about building a portfolio website. A
+                        <p><b>This project is about building a portfolio website. A
                            design mockup will be provided as a PDF-file, and we must
                            replicate that design in HTML and bootstrap CSS. We have to
                            develop a responsive website that will display images,
                            descriptions and links to each of the portfolio projects we
                            will complete through the course of our Nanodegree program.
                            The source code for this project can be found when you click
-                           the github link here.</b>
+                           the github link here.</b></p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
