updated with review comments

--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300" rel="stylesheet">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/style3.css">
-        <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
-        <script type="text/javascript" src="js/bootstrap.min.js"></script>
     </head>
     <body>
         <!-- Modal -->
@@ -19,13 +17,13 @@
                     <div class="modal-header">
                         <h4 class="modal-title" id="myModalLabel1">Movie Trailer Project</h4>
                     </div>
-                    <div class="modal-body text-blue">
+                    <div class="modal-body text-black">
                         <img class="img-responsive" src="images/movies_project_small.png" alt="Movies Project">
-                        <p><b>This project is about writing a server-side code to store a list of
+                        <p>This project is about writing a server-side code to store a list of
                            your favorite movies, including box art imagery and a movie trailer URL.
                            A static webpage will be generated from the code allowing vistors to
                            browser their movies and watch trailers.This was my first project in
-                           this class. I learned a lot about Python.</b></p>
+                           this class. I learned a lot about Python.</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -40,15 +38,15 @@
                     <div class="modal-header">
                         <h4 class="modal-title" id="myModalLabel2">Tic Tac Toe Game Project</h4>
                     </div>
-                    <div class="modal-body text-blue">
+                    <div class="modal-body text-black">
                         <img class="img-responsive" src="images/tic_tac_toe_small.png" alt="Tic Tac Toe Game Project">
-                        <p><b>This project is about creating a tic-tac-toe game in python
+                        <p>This project is about creating a tic-tac-toe game in python
                               These are the requirements:
                               2 players should be able to play the game (both sitting at the same computer)
                               The board should be printed out every time a player makes a move
                               You should be able to accept input of the player position and then place a
                               symbol on the board
-                              I learned a lot about Python.</b></p>
+                              I learned a lot about Python.</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -63,9 +61,9 @@
                     <div class="modal-header">
                         <h4 class="modal-title" id="myModalLabel3">Black Jack Game Project</h4>
                     </div>
-                    <div class="modal-body text-blue">
+                    <div class="modal-body text-black">
                         <img class="img-responsive" src="images/black_jack_small.png" alt="Black Jack Game Project">
-                        <p><b>This project is about creating a Complete BlackJack card Game in python.
+                        <p>This project is about creating a Complete BlackJack card Game in python.
                               These are the requirements:
                               You need to create a simple text-based BlackJack game
                               The game needs to have one player versus an automated dealer.
@@ -73,7 +71,7 @@
                               The player must be able to pick their betting amount.
                               You need to keep track of the players total money.
                               You need to alert the player of wins, losses, or busts, etc...
-                              I learned a lot about Python classes.</b></p>
+                              I learned a lot about Python classes.</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -88,16 +86,16 @@
                     <div class="modal-header">
                         <h4 class="modal-title" id="myModalLabel4">Portfolio Project</h4>
                     </div>
-                    <div class="modal-body text-blue">
+                    <div class="modal-body text-black">
                         <img class="img-responsive" src="images/portfolio.png" alt="Portfolio Project">
-                        <p><b>This project is about building a portfolio website. A
+                        <p>This project is about building a portfolio website. A
                            design mockup will be provided as a PDF-file, and we must
                            replicate that design in HTML and bootstrap CSS. We have to
                            develop a responsive website that will display images,
                            descriptions and links to each of the portfolio projects we
                            will complete through the course of our Nanodegree program.
                            The source code for this project can be found when you click
-                           the github link here.</b></p>
+                           the github link here.</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -130,7 +128,7 @@
         </nav>
         <!-- Main Code -->
         <div class="container">
-            <div class = "row">
+            <header class = "row">
                 <div class="col-md-6">
                     <img class = "image_responsive title-logo" src="images/subadhra_logo.png" alt="Udacity logo">
                 </div>
@@ -138,51 +136,69 @@
                     <h3 class="title-super text-thin text-blue">Subadhra Srinivasan</h3>
                     <h4>Full Stack Web Developer</h4>
                 </div>
-            </div>
+            </header>
             <div class = "row">
                 <div class="col-md-12">
                     <hr>
                 </div>
             </div>
-            <div class = "row">
-                <div class="col-md-12">
-                    <picture>
-                        <source
-                            media = "(max-width: 400px)"
-                            srcset = "images/work_1-400x400_small.png 400w,images/work_1-600_medium.png 600w, images/work_1-800_large_1x.png 800w"
-                            sizes = "100vw" class="responsive-image">
-                        <source
-                            media = "(min-width: 400px)"
-                            srcset = "images/work_1-800_large_1x.png 800w, images/work_1-1600_large_2x.png 1600w"
-                            sizes = "100vw" class="responsive-image">
+            <section class="main-work">
+                <article>
+                    <div class = "row">
+                        <div class="col-md-12">
+                            <picture>
+                                <source
+                                    media = "(max-width: 400px)"
+                                    srcset = "images/work_1-400x400_small.png 400w,images/work_1-600_medium.png 600w, images/work_1-800_large_1x.png 800w"
+                                    sizes = "100vw" class="responsive-image">
+                                <source
+                                    media = "(min-width: 400px)"
+                                    srcset = "images/work_1-800_large_1x.png 800w, images/work_1-1600_large_2x.png 1600w"
+                                    sizes = "100vw" class="responsive-image">
 
-                        <img class="img-responsive" src="images/work_1-800_large_1x.png" alt="Main work image" data-toggle="modal" data-target="#project4">
-                    </picture>
-
-                </div>
-            </div>
+                                <img class="img-responsive" src="images/work_1-800_large_1x.png" alt="Main work image" data-toggle="modal" data-target="#project4">
+                            </picture>
+                        </div>
+                    </div>
+                </article>
+            </section>
             <div class = "row">
                 <div class="col-md-12">
                     <h2 class="text-muted">Featured Work</h2>
                 </div>
             </div>
             <div class = "row text-center">
-                <div class="col-md-4">
-                    <img class="img-responsive center-block" src="images/movies_project_small.png" alt="Movies Project" data-toggle="modal" data-target="#project1">
-                    <h3 class="text-uppercase">Movie Trailer Project</h3>
-                    <a class="title-href" href= "https://github.com/subadhra-srinivas/Udacity/tree/master/Fsdn/Movie_Trailer_Website">Link to Project in Github</a>
-                </div>
-                <div class="col-md-4">
-                    <img class="img-responsive center-block" src="images/tic_tac_toe_small.png" alt="Tic Tac Toe Game" data-toggle="modal" data-target="#project2">
-                    <h3 class="text-uppercase">Tic Tac Toe Game Project</h3>
-                    <a class="title-href" href= "https://github.com/subadhra-srinivas/Udemy_Tic_Tac_Toe_Project">Link to Project in Github</a>
-                </div>
-                <div class="col-md-4">
-                    <img class="img-responsive center-block" src="images/black_jack_small.png" alt="Black Jack Game" data-toggle="modal" data-target="#project3">
-                    <h3 class="text-uppercase">Black Jack Game Project</h3>
-                    <a class="title-href" href="https://github.com/subadhra-srinivas/Udemy_Black_Jack_Game_Project">Link to Project in Github</a>
-                </div>
+                <section class="movie-project">
+                    <article>
+                        <div class="col-md-4">
+                            <img class="img-responsive center-block" src="images/movies_project_small.png" alt="Movies Project" data-toggle="modal" data-target="#project1">
+                            <h3 class="text-uppercase">Movie Trailer Project</h3>
+                            <a class="title-href" href= "https://github.com/subadhra-srinivas/Udacity/tree/master/Fsdn/Movie_Trailer_Website">Link to Project in Github</a>
+                        </div>
+                    </article>
+                </section>
+                <section class="tic-tac-toe">
+                    <article>
+                        <div class="col-md-4">
+                            <img class="img-responsive center-block" src="images/tic_tac_toe_small.png" alt="Tic Tac Toe Game" data-toggle="modal" data-target="#project2">
+                            <h3 class="text-uppercase">Tic Tac Toe Game Project</h3>
+                            <a class="title-href" href= "https://github.com/subadhra-srinivas/Udemy_Tic_Tac_Toe_Project">Link to Project in Github</a>
+                        </div>
+                    </article>
+                </section>
+                <section class="black-jack">
+                    <article>
+                        <div class="col-md-4">
+                            <img class="img-responsive center-block" src="images/black_jack_small.png" alt="Black Jack Game" data-toggle="modal" data-target="#project3">
+                            <h3 class="text-uppercase">Black Jack Game Project</h3>
+                            <a class="title-href" href="https://github.com/subadhra-srinivas/Udemy_Black_Jack_Game_Project">Link to Project in Github</a>
+                        </div>
+                    </article>
+                </section>
             </div>
         </div>
+        <!--scripts-->
+        <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+        <script type="text/javascript" src="js/bootstrap.min.js"></script>
     </body>
 </html>
