--- a/index.html
+++ b/index.html
@@ -143,8 +143,7 @@
                 </div>
             </div>
             <section class="main-work">
-                <article>
-                    <div class = "row">
+                <article class = "row">
                         <div class="col-md-12">
                             <picture>
                                 <source
@@ -159,43 +158,30 @@
                                 <img class="img-responsive" src="images/work_1-800_large_1x.png" alt="Main work image" data-toggle="modal" data-target="#project4">
                             </picture>
                         </div>
-                    </div>
                 </article>
             </section>
-            <div class = "row">
-                <div class="col-md-12">
+            <section class = "featured-work row">
+                <article class="col-md-12">
                     <h2 class="text-muted">Featured Work</h2>
-                </div>
-            </div>
-            <div class = "row text-center">
-                <section class="movie-project">
-                    <article>
-                        <div class="col-md-4">
-                            <img class="img-responsive center-block" src="images/movies_project_small.png" alt="Movies Project" data-toggle="modal" data-target="#project1">
-                            <h3 class="text-uppercase">Movie Trailer Project</h3>
-                            <a class="title-href" href= "https://github.com/subadhra-srinivas/Udacity/tree/master/Fsdn/Movie_Trailer_Website">Link to Project in Github</a>
-                        </div>
-                    </article>
-                </section>
-                <section class="tic-tac-toe">
-                    <article>
-                        <div class="col-md-4">
-                            <img class="img-responsive center-block" src="images/tic_tac_toe_small.png" alt="Tic Tac Toe Game" data-toggle="modal" data-target="#project2">
-                            <h3 class="text-uppercase">Tic Tac Toe Game Project</h3>
-                            <a class="title-href" href= "https://github.com/subadhra-srinivas/Udemy_Tic_Tac_Toe_Project">Link to Project in Github</a>
-                        </div>
-                    </article>
-                </section>
-                <section class="black-jack">
-                    <article>
-                        <div class="col-md-4">
-                            <img class="img-responsive center-block" src="images/black_jack_small.png" alt="Black Jack Game" data-toggle="modal" data-target="#project3">
-                            <h3 class="text-uppercase">Black Jack Game Project</h3>
-                            <a class="title-href" href="https://github.com/subadhra-srinivas/Udemy_Black_Jack_Game_Project">Link to Project in Github</a>
-                        </div>
-                    </article>
-                </section>
-            </div>
+                </article>
+            </section>
+            <section class = "projects row text-center">
+                <article class="col-md-4">
+                    <img class="img-responsive center-block" src="images/movies_project_small.png" alt="Movies Project" data-toggle="modal" data-target="#project1">
+                    <h3 class="text-uppercase">Movie Trailer Project</h3>
+                    <a class="title-href" href= "https://github.com/subadhra-srinivas/Udacity/tree/master/Fsdn/Movie_Trailer_Website">Link to Project in Github</a>
+                </article>
+                <article class="col-md-4">
+                    <img class="img-responsive center-block" src="images/tic_tac_toe_small.png" alt="Tic Tac Toe Game" data-toggle="modal" data-target="#project2">
+                    <h3 class="text-uppercase">Tic Tac Toe Game Project</h3>
+                    <a class="title-href" href= "https://github.com/subadhra-srinivas/Udemy_Tic_Tac_Toe_Project">Link to Project in Github</a>
+                </article>
+                <article class="col-md-4">
+                    <img class="img-responsive center-block" src="images/black_jack_small.png" alt="Black Jack Game" data-toggle="modal" data-target="#project3">
+                    <h3 class="text-uppercase">Black Jack Game Project</h3>
+                    <a class="title-href" href="https://github.com/subadhra-srinivas/Udemy_Black_Jack_Game_Project">Link to Project in Github</a>
+                </article>
+            </section>
         </div>
         <!--scripts-->
         <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
