updated with review comments

--- a/index.html
+++ b/index.html
@@ -142,24 +142,22 @@
                     <hr>
                 </div>
             </div>
-            <section class="main-work">
-                <article class = "row">
-                        <div class="col-md-12">
-                            <picture>
-                                <source
-                                    media = "(max-width: 400px)"
-                                    srcset = "images/work_1-400x400_small.png 400w,images/work_1-600_medium.png 600w, images/work_1-800_large_1x.png 800w"
+            <div class = "row">
+                <div class="col-md-12">
+                    <picture>
+                        <source
+                            media = "(max-width: 400px)"
+                            srcset = "images/work_1-400x400_small.png 400w,images/work_1-600_medium.png 600w, images/work_1-800_large_1x.png 800w"
                                     sizes = "100vw" class="responsive-image">
-                                <source
-                                    media = "(min-width: 400px)"
-                                    srcset = "images/work_1-800_large_1x.png 800w, images/work_1-1600_large_2x.png 1600w"
-                                    sizes = "100vw" class="responsive-image">
+                        <source
+                            media = "(min-width: 400px)"
+                            srcset = "images/work_1-800_large_1x.png 800w, images/work_1-1600_large_2x.png 1600w"
+                            sizes = "100vw" class="responsive-image">
 
-                                <img class="img-responsive" src="images/work_1-800_large_1x.png" alt="Main work image" data-toggle="modal" data-target="#project4">
-                            </picture>
-                        </div>
-                </article>
-            </section>
+                        <img class="img-responsive" src="images/work_1-800_large_1x.png" alt="Main work image" data-toggle="modal" data-target="#project4">
+                    </picture>
+                </div>
+            </div>
             <section class = "featured-work row">
                 <article class="col-md-12">
                     <h2 class="text-muted">Featured Work</h2>
