fix: fixed changes to modal

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <h4 class="modal-title" id="myModalLabel5">Neighborhood Map Project</h4>
                     </div>
                     <div class="modal-body text-black">
-                        <img class="img-responsive" src="images/portfolio.png" alt="Portfolio Project">
+                        <img class="img-responsive" src="images/neighborhood_map-400x400_small.png" alt="Neighborhood Map Project">
                           <p>This project is about a web application that shows 
                              the pizza shops in Sunnyvale, CA with markers and 
                              additional information from FourSquare. The source 
