docs: updated comments for project section

--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
                     </picture>
                 </div>
             </div>
+            <!-- Projects -->
             <section class = "featured-work row">
                 <div class="col-md-12">
                     <h2 class="text-muted">Featured Work</h2>
