feat: added new project i.e. item catalog to portfolio

--- a/index.html
+++ b/index.html
@@ -181,6 +181,13 @@
                         <a class="title-href" href="https://github.com/subadhra-srinivas/Udemy_Black_Jack_Game_Project">Link to Project in Github</a>
                     </article>
                 </div>
+                <div class = "row text-center">
+                    <article class="col-md-4">
+                        <img class="img-responsive center-block" src="images/item_catalog-400x400_small.png" alt="Item Catalog Project" data-toggle="modal" data-target="#project5">
+                        <h3 class="text-uppercase">Item Catalog Project</h3>
+                        <a class="title-href" href= "https://github.com/subadhra-srinivas/Udacity_Fsnd_Item_Catalog_Project">Link to Project in Github</a>
+                    </article>
+                </div>
             </section>
         </div>
         <!--scripts-->
