feat: added model dialog for item catalog project

--- a/index.html
+++ b/index.html
@@ -103,7 +103,26 @@
                 </div>
             </div>
         </div>
-
+          <!-- Modal -->
+        <div class="modal fade" id="project5" tabindex="-1" role="dialog" aria-labelledby="myModalLabel5" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title" id="myModalLabel5">Item Catalog Project</h4>
+                    </div>
+                    <div class="modal-body text-black">
+                        <img class="img-responsive" src="images/item_catalog-400x400_small.png" alt="Item Catalog Project">
+                        <p>This project is about developing an application that provides a list of items within a variety 
+                           of categories as well as provide a user registration and authentication system. Registered users 
+                           will have the ability to post, edit and delete their own items.
+                           The source code for this project can be found when you click the github link here.</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
          <!-- Navbar -->
         <nav class="navbar navbar-inverse">
             <div class="container">
