feat: added Neighborhood Map Project

--- a/index.html
+++ b/index.html
@@ -206,6 +206,11 @@
                         <h3 class="text-uppercase">Item Catalog Project</h3>
                         <a class="title-href" href= "https://github.com/subadhra-srinivas/Udacity_Fsnd_Item_Catalog_Project">Link to Project in Github</a>
                     </article>
+                    <article class="col-md-4">
+                        <img class="img-responsive center-block" src="images/neighborhood_map-400x400_small.png" alt="Neighborhood Map Project" data-toggle="modal" data-target="#project6">
+                        <h3 class="text-uppercase">Neighborhood Map Project</h3>
+                        <a class="title-href" href= "https://github.com/subadhra-srinivas/Udacity_Fsnd_Neighborhood_Map_Project">Link to Project in Github</a>
+                    </article>
                 </div>
             </section>
         </div>
