feat: added modal for neighborhood Map Project

--- a/index.html
+++ b/index.html
@@ -123,6 +123,27 @@
                 </div>
             </div>
         </div>
+        <!-- Modal -->
+        <div class="modal fade" id="project6" tabindex="-1" role="dialog" aria-labelledby="myModalLabel6" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title" id="myModalLabel6">Neighborhood Map Project</h4>
+                    </div>
+                    <div class="modal-body text-black">
+                        <img class="img-responsive" src="images/neighborhood_map-400x400_small.png" alt="Neighborhood Map Project">
+                        <p>This project is about developing a single page application featuring a map of your 
+                           neighborhood or a neighborhood you would like to visit. You will then add functionality 
+                           to this map including highlighted locations, third-party data about those locations 
+                           and various ways to browse the content. The source code for this project can be found 
+                           when you click the github link here.</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
          <!-- Navbar -->
         <nav class="navbar navbar-inverse">
             <div class="container">
