feat: adding linux server configuration project

--- a/index.html
+++ b/index.html
@@ -232,6 +232,11 @@
                         <h3 class="text-uppercase">Neighborhood Map Project</h3>
                         <a class="title-href" href= "https://github.com/subadhra-srinivas/Udacity_Fsnd_Neighborhood_Map_Project">Link to Project in Github</a>
                     </article>
+                    <article class="col-md-4">
+                        <img class="img-responsive center-block" src="images/linux_server_configuration-400x400_small.png" alt="Linux Server Configuration Project" data-toggle="modal" data-target="#project7">
+                        <h3 class="text-uppercase">Linux Server Configuration</h3>
+                        <a class="title-href" href= "https://github.com/subadhra-srinivas/Udacity_Fsnd_Linux_Server_Configuration_Project">Link to Project in Github</a>
+                    </article>
                 </div>
             </section>
         </div>
