feat: adding modal for Linux Server Configuration Project

--- a/index.html
+++ b/index.html
@@ -144,6 +144,27 @@
                 </div>
             </div>
         </div>
+        <!-- Modal -->
+        <div class="modal fade" id="project7" tabindex="-1" role="dialog" aria-labelledby="myModalLabel7" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title" id="myModalLabel7">Linux Server Configuration Project</h4>
+                    </div>
+                    <div class="modal-body text-black">
+                        <img class="img-responsive" src="images/linux_server_configuration-400x400_small.png" alt="Linux Server Configuration Project">
+                        <p>This project is about taking a baseline installation of a Linux server and 
+                           prepare it to host your web applications. The server is secured from a number 
+                           of attack vectors, installed and configured a database server, and deployed 
+                           one of your existing web applications onto it. The configurations for this 
+                           project can be found when you click the github link here.</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
          <!-- Navbar -->
         <nav class="navbar navbar-inverse">
             <div class="container">
