--- a/index.html
+++ b/index.html
@@ -259,6 +259,14 @@
                         <a class="title-href" href= "https://github.com/subadhra-srinivas/Udacity_Fsnd_Linux_Server_Configuration_Project">Link to Project in Github</a>
                     </article>
                 </div>
+                <div class = "row text-center">
+                    <article class="col-md-4">
+                        <img class="img-responsive center-block" src="images/log_analysis-400x400_small.png" alt="Log Analysis Project" data-toggle="modal" data-target="#project8">
+                        <h3 class="text-uppercase">Log Analysis Project</h3>
+                        <a class="title-href" href="https://github.com/subadhra-srinivas/Udacity_Fsnd_Log_Analysis_Project">Link to Project in Github</a>
+                    </article>
+
+                </div>
             </section>
         </div>
         <!--scripts-->
