feat: adding modal for log analysis project

--- a/index.html
+++ b/index.html
@@ -165,6 +165,25 @@
                 </div>
             </div>
         </div>
+        <!-- Modal -->
+        <div class="modal fade" id="project8" tabindex="-1" role="dialog" aria-labelledby="myModalLabel8" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title" id="myModalLabel8">Log Analysis Project</h4>
+                    </div>
+                    <div class="modal-body text-black">
+                        <img class="img-responsive" src="images/log_analysis-400x400_small.png" alt="Log Analysis Project">
+                        <p>In this project, SQL database skills will be stretched. Applied SQL skills 
+                           to a reporting tool that summarizes data from a large database.The source 
+                           code for this project can be found when you click the github link here.</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
          <!-- Navbar -->
         <nav class="navbar navbar-inverse">
             <div class="container">
